--- a/index.html
+++ b/index.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Weather App</title>
-        <link rel="stylesheet" href="assets/css/style.css" />
-    </head>
-    <body>
-            <form id="form">
-                <input
-                    type="text"
-                    id="search"
-                    placeholder="Search by location"
-                    autocomplete="off"
-                    />
-            </form>
-            <main id="main"></main>
-        <script src="assets/js/script.js" defer></script>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/script.js" defer></script>
+    <title>Weather Forecast</title>
+</head>
+
+<body>
+    <div class="card">
+        <div class="search">
+            <input type="text" class="searchBar" placeholder="Search City">
+            <button>
+                <svg stroke="currentColor" fill="currentColor" stroke-width="0" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 1024 1024" height="1.5em" width="1.5em">
+                    <path
+                        d="M500.3 443.7l-119.7-119.7c27.22-40.41 40.65-90.9 33.46-144.7C401.8 87.79 326.8 13.32 235.2 1.723C99.01-15.51-15.51 99.01 1.724 235.2c11.6 91.64 86.08 166.7 177.6 178.9c53.8 7.189 104.3-6.236 144.7-33.46l119.7 119.7c15.62 15.62 40.95 15.62 56.57 0C515.9 484.7 515.9 459.3 500.3 443.7zM79.1 208c0-70.58 57.42-128 128-128s128 57.42 128 128c0 70.58-57.42 128-128 128S79.1 278.6 79.1 208z" />
+                </svg>
+            </button>
+        </div>
+        <div class="weatherLoading">
+            <h2 class="city"></h2>
+            <h1 class="temp">°C</h1>
+            <div class="otherDetails">
+                <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon" />
+
+                <div class="description"></div>
+            </div>
+            <h4 class="feelslike">Feels like: °C</h4>
+            <div class="humidity">Humidity: %</div>
+            <div class="wind">Wind:  km/h </div>
+        </div>
+    </div>
+
+</body>
+
 </html>
